# cyberdog_simulator

./: ReadMe.md
cyberdog_example/: CMakeLists.txt  package.xml
cyberdog_example/src/: cyberdogmsg_sender.cpp  keybroad_commander.cpp
cyberdog_gazebo/: CMakeLists.txt  package.xml
cyberdog_gazebo/include/: actuator.hpp  cyberdog_sync_lcmt.hpp  foot_contact_plugin.hpp  gazebo_foot_contact.hpp  lcmhandler.hpp  legged_plugin.hpp  legged_simparam.hpp  node_executor.hpp
cyberdog_gazebo/include/ctrl_ros/: c_types.h  cpp_types.hpp  parameters.hpp
cyberdog_gazebo/include/ctrl_ros/control_parameters/: control_parameter_interface.hpp  control_parameters.hpp
cyberdog_gazebo/include/ctrl_ros/sim_utilities/: gamepad_command.hpp  imu_types.hpp  simulator_message.hpp  spine_board.hpp  visualization_data.hpp
cyberdog_gazebo/include/ctrl_ros/utilities/: shared_memory.hpp  utilities.h
cyberdog_gazebo/launch/: cyberdog_control_launch.py  gazebo.launch.py  gazebo_nav.launch.py  heightmap_gazebo.launch.py
cyberdog_gazebo/media/materials/textures/: CMakeLists.txt
cyberdog_gazebo/script/: gazebolauncher.py  launchcontrol.sh  launchgazebo.sh  launchsim.py  launchvisual.sh
cyberdog_gazebo/src/: foot_contact_plugin.cpp  lcmhandler.cpp  legged_plugin.cpp  legged_simparam.cpp
cyberdog_gazebo/src/control_parameters/: control_parameter_interface.cpp  control_parameters.cpp
cyberdog_gazebo/src/sim_utilities/: spine_board.cpp
cyberdog_gazebo/src/utilities/: utilities.cpp
cyberdog_gazebo/world/: heightmap.world  simple.world
cyberdog_msg/: CMakeLists.txt  package.xml
cyberdog_msg/msg/: ApplyForce.msg  YamlParam.msg
cyberdog_robot/cyberdog_description/: CMakeLists.txt
cyberdog_robot/cyberdog_description/launch/: cyberdog.launch.py  cyberdog_description.launch.py
cyberdog_robot/cyberdog_description/xacro/: const.xacro  leg.xacro  robot.xacro
cyberdog_simulator/: CMakeLists.txt  package.xml
cyberdog_visual/: CMakeLists.txt  package.xml
cyberdog_visual/include/cyberdog_visual/: cyberdog_visual.hpp
cyberdog_visual/launch/: cyberdog_lcm_repaly.launch.py  cyberdog_tf_publish.launch.py  cyberdog_visual.launch.py
cyberdog_visual/lcm_type/: leg_control_data_lcmt.hpp  localization_lcmt.hpp  simulator_lcmt.hpp  state_estimator_lcmt.hpp
cyberdog_visual/rviz/: config.rviz  cyberdog_visual2.rviz  cyberdog_visual_replay.rviz
cyberdog_visual/src/: cyberdog_visual.cpp  cyberdog_visual_node.cpp
