<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_simulator</name>
  <version>0.0.0</version>
  <description>package for building all the projects</description>
  <maintainer email="lijunhong1@xiaomi.com">ljh</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cyberdog_msg</exec_depend>
  <exec_depend>cyberdog_gazebo</exec_depend>
  <exec_depend>cyberdog_description</exec_depend>
  <exec_depend>cyberdog_visual</exec_depend>

  <exec_depend>cyberdog_example</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
