<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cyberdog_visual</name>
    <version>0.0.0</version>
    <description>The cyberdog virsual package</description>
    <maintainer email="youyangwei1@xiaomi.com">You Yangwei</maintainer>
    <license>Apache License, Version 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>gazebo_msgs</depend>
    <depend>urdf</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
